--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/x-data-grid": "^5.15.1",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
