--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.10.0",
     "@mui/x-data-grid": "^5.15.1",
     "@nivo/bar": "^0.80.0",
+    "@nivo/bump": "^0.80.0",
     "@nivo/circle-packing": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
+    "@nivo/marimekko": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/sunburst": "^0.80.0",
     "axios": "^0.27.2",
